Removing some arrows and maybe it will fix the profile image being squashed

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -867,7 +867,7 @@ a {
 }
 .cid-s8ObjxQNA2 .user_image {
   width: 200px;
-  height: 200px;
+  height: 267px;  /* Maintain 3:4 aspect ratio (200 * 1.333 = 267) */
   margin-bottom: 1.6rem;
   overflow: hidden;
   border-radius: 50%;
@@ -875,13 +875,13 @@ a {
 }
 .cid-s8ObjxQNA2 .user_image img {
   width: 100%;
-  min-width: 100%;
-  min-height: 100%;
+  height: 100%;
+  object-fit: cover;  /* Crop instead of squash */
 }
 @media (max-width: 230px) {
   .cid-s8ObjxQNA2 .user_image {
     width: 100%;
-    height: auto;
+    height: 133vw;  /* Maintain 3:4 aspect ratio on small screens */
   }
 }
 .cid-s8ObjxQNA2 H3 {
